[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/WFCGenerator/WFCGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Interface/MapDisplay/MapDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/App/App.gd" type="Script" id=3]
[ext_resource path="res://Samples/sample1.png" type="Image" id=4]
[ext_resource path="res://Scenes/Interface/PatternDisplayList/PatternDisplayList.tscn" type="PackedScene" id=5]

[node name="App" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
sample_display_path = NodePath("PanelContainer/HBoxContainer/MapDisplay")
pattern_display_list_path = NodePath("PanelContainer/HBoxContainer/PatternDisplayList")
full_pattern_display_list_path = NodePath("PanelContainer/HBoxContainer/FullPatternDisplayList")

[node name="WFCGenerator" parent="." instance=ExtResource( 1 )]
sample_image = ExtResource( 4 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1023.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1016.0
margin_bottom = 592.0

[node name="MapDisplay" parent="PanelContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 771.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PatternDisplayList" parent="PanelContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 775.0
margin_right = 890.0
rect_min_size = Vector2( 115, 0 )
size_flags_horizontal = 0

[node name="FullPatternDisplayList" parent="PanelContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 894.0
rect_min_size = Vector2( 115, 0 )
size_flags_horizontal = 0

[connection signal="full_pattern_list_built" from="WFCGenerator" to="." method="_on_WFCGenerator_full_pattern_list_built"]
[connection signal="patterns_sliced" from="WFCGenerator" to="." method="_on_WFCGenerator_patterns_sliced"]
[connection signal="sample_read" from="WFCGenerator" to="." method="_on_WFCGenerator_sample_read"]
